# linear-regression

./: README.md  pyproject.toml  regression.ipynb
.ipynb_checkpoints/: regression-checkpoint.ipynb
